--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 
 # AI Services
 GEMINI_API_KEY=your_gemini_key_here
+GROQ_API_KEY=your_groq_key_here
+ANTHROPIC_API_KEY=your_anthropic_key_here
+OPENAI_API_KEY=your_openai_key_here
 NEWSAPI_AI_KEY=your_newsapi_ai_key_here
 ELEVENLABS_API_KEY=your_elevenlabs_key_here
 
